# password-vault

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: audit.yml  ci.yml  lint.yml  release.yml
docs/: requirements.md  v1-completion-plan.md
src/: main.rs
src/audit/: mod.rs
src/auth/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/crypto/: mod.rs
src/db/: mod.rs
src/models/: mod.rs
src/services/: mod.rs
src/storage/: mod.rs
src/tui/: mod.rs
src/utils/: clipboard.rs  mod.rs
