[package]
name = "vault"
version = "0.2.0"
edition = "2021"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# Cryptography
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
sha2 = "0.10"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Filesystem paths
directories = "5"

# Utilities
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
flate2 = "1"
tar = "0.4"
arboard = "3.6"
